Update to Graylog 6.1.2